# procon-sandbox

./: .dockerignore  .env.example  .gitignore  COMMAND.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  makefile.md  requirements.txt  run.sh  test.txt
.devcontainer/: CreateCommand  Dockerfile  apt-packages.txt  cargo-tools.txt  devcontainer.json  python-requirements.txt  rustup-components.txt  rustup-targets.txt
.devcontainer/generic/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.github/: copilot-instructions.md  libraries.json
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/scripts/: build_docs_site.py  detect_library_changes.py
.github/workflows/: README.md  README_tester.md  docs-pages.yml  linter.yml  test.yml
ai/: LEARNING_ROADMAP.md  README.md  tasks.md
ai/cpp/include/: SelfPlay.hpp
ai/cpp/src/: BitBoard.cpp  SelfPlay.cpp  main.cpp  pybind_module.cpp
ai/data/: game.csv
ai/python/: dataset.py  engine.py  model_move_server.py  phase4_autoloop.py  train.py
ai/visualizer/src/: visualizer.cpp
ai/visualizer/yew-othello/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
ai/visualizer/yew-othello/src/: lib.rs  main.rs
ai_trainer/: LEARNING_ROADMAP.md  README.md  model_data_ops.md  tasks.md
ai_trainer/cpp/include/: BitBoard.hpp
ai_trainer/cpp/src/: BitBoard.cpp
ai_trainer/python/: build_cpp_engine.py  engine.py  model.py  phase4_autoloop.py  value_inference_wrapper.py
ai_trainer/visualizer/yew-othello/: Cargo.toml  style.css
ai_trainer/visualizer/yew-othello/src/: main.rs
database/: README.md
diagrams/: exp_rebase.drawio  explanation.drawio
diagrams/contributing/: exp_cherrypick.drawio  exp_debug.drawio  exp_pullrequest.drawio  exp_rebase.drawio  exp_reset.drawio  exp_stash.drawio  explanation.drawio
diagrams/repo_readme/: overall_view.drawio
docker/: README.md
docs/: _navigation.md  class_design.md  coding_guidelines.md  development_flow.md  directory_structure.md  docker_usage.md  draft_pull_request.md  environment_setup.md  git_usage.md  github_usage.md  issue_usage.md  naming_rules.md  navigation.md  repo_settings.md
docs/copilot-docs/: github-copilot-cli-guide.md
docs/git-hooks/: pre-commit
docs/script/: gen-contribut
docs/tester-docs/: 01_prerequisites.md  02_architecture.md  03_python_pytest.md  04_cpp_gtest_testmate.md  05_implementation_from_scratch.md  06_operations_ci.md  07_troubleshooting.md  README.md  _navigation.md
solve/: parameters.hpp  solve.cpp  util.hpp
tester/: README.md  testAll.py  tester.cpp  tester.py
tester/cpp/: CMakeLists.txt
tester/docs/: 01_prerequisites.md  02_architecture.md  03_python_pytest.md  04_cpp_gtest_testmate.md  05_implementation_from_scratch.md  README.md
tester/python/: conftest.py  test_array.py
visualizer/: Cargo.toml  README.md
visualizer/src/: main.rs
