
[package]
name = "yew-othello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yew-othello"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
